# integration-samples

./: README-ptbr.md  README.md
master/: .gitignore
master/MobiCortexSdkLibCsharp/: MobiCortex.Sdk.csproj
master/MobiCortexSdkLibCsharp/Exceptions/: MobiCortexException.cs
master/MobiCortexSdkLibCsharp/Interfaces/: IAccessService.cs  ICadastroService.cs  IEntidadeService.cs  IMidiaService.cs  IMobiCortexClient.cs  IMqttBrokerService.cs  IMqttClientService.cs  ISistemaService.cs  IVideoSourceService.cs  IWebhookConfigService.cs  IWebhookServerService.cs
master/MobiCortexSdkLibCsharp/Models/: MobiCortexModels.cs
master/MobiCortexSdkLibCsharp/Services/: MobiCortexClient.cs  MqttBrokerService.cs  MqttClientService.cs  WebhookServerService.cs
master/csharp/: CHANGELOG-ptbr.md  CHANGELOG.md  LICENSE  MainForm.Designer.cs  MainForm.cs  MobiCortexIntegration.sln  Program.cs  README-ptbr.md  README.md  SmartSdk.csproj  SmartSdk.preprocessed.xml  SmartSdk.sln  build-last.txt  build-output.txt  build-sdk.txt  build.bat  demo.binlog
master/csharp.net/: CHANGELOG-ptbr.md  GlobalUsings.cs  MainForm.Designer.cs  MainForm.cs  MobiCortexIntegration.sln  Program.cs  README.md  SmartSdk.csproj  build.bat
master/csharp.net/Forms/: FormCadastroCentral.Designer.cs  FormCadastroCentral.cs  sedICOGHE  (+32 more)
master/docs/: MobiCortex-Master-Endpoints-Postman.json  MobiCortex-Master-Endpoints.md
master/nodejs/: README.md  TESTE.md  main.js  package.json
master/python/: README.md  mbcortex_config.json  mbcortex_demo.py  pyproject.toml
master/python/src/: exceptions.py  models.py
(+84 files in other folders)
